--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -47,33 +47,56 @@
         android:paddingEnd="50dp"
         android:paddingBottom="100dp">
 
-        <EditText
-            android:id="@+id/email"
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/mail_layout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:minHeight="48dp"
-            android:inputType="textEmailAddress"
-            android:hint="Email" />
+            android:layout_marginTop="10dp"
+            android:hint="Email"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cateogry"
+            app:startIconDrawable="@drawable/baseline_email_24"
+            app:errorEnabled="true"
+            app:errorIconDrawable="@drawable/baseline_error_24">
 
-        <EditText
-            android:id="@+id/password"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/email"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:required="true" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/password_layout"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:minHeight="48dp"
-            android:inputType="textPassword"
-            android:hint="Password"  />
+            android:layout_marginTop="10dp"
+            android:hint="password"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cateogry"
+            app:endIconMode="password_toggle"
+            app:startIconDrawable="@drawable/baseline_lock_person_24">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/password"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:required="true" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:layout_width="134dp"
+            android:layout_width="154dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="50sp"
+            android:onClick="registrazione"
             android:padding="15dp"
             android:text="Register"
-            android:textSize="20sp"
-            android:onClick="registrazione"
-            />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/textView5"
