--- a/app/src/main/res/layout/item_evento.xml
+++ b/app/src/main/res/layout/item_evento.xml
@@ -42,7 +42,7 @@
         android:layout_height="wrap_content"
         android:text="Nome"
         android:textColor="@color/principal"
-        android:textSize="20sp"
+        android:textSize="20dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,7 +58,7 @@
         android:layout_marginTop="8dp"
         android:maxLength="55"
         android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus suscipit libero quis odio lacinia, quis mollis ipsum lacinia."
-        android:textSize="10sp"
+        android:textSize="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="@+id/nomeTextView"
@@ -81,7 +81,7 @@
         android:textStyle="bold"
         android:text="Eboli, Salerno"
         android:textColor="@color/black"
-        android:textSize="10sp"
+        android:textSize="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView7"
         app:layout_constraintStart_toEndOf="@+id/imageView7"
         app:layout_constraintTop_toTopOf="@+id/imageView7" />
@@ -93,7 +93,7 @@
         android:layout_marginStart="192dp"
         android:text="1/1/2021"
         android:textColor="@color/black"
-        android:textSize="10sp"
+        android:textSize="10dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@+id/imageView7"
         app:layout_constraintEnd_toEndOf="parent"
