--- a/app/src/main/res/layout/fragment_wallet.xml
+++ b/app/src/main/res/layout/fragment_wallet.xml
@@ -25,7 +25,13 @@
             app:layout_constraintTop_toTopOf="parent"
             android:textColor="@color/white"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Tenere premuto!"
+        android:gravity="center"
+        android:background="@color/green"
+        android:textColor="@color/white"/>
     <ListView
         android:id="@+id/listaWallet"
         android:layout_width="match_parent"
